docs: update filter and resources/uid docs
